[package]
name = "wzd"
version = "0.0.0"
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2021"
description = "write zeros to disk"
repository = "https://github.com/hzqd/wzd"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
